2005-09-17  John Finlay  <finlay@moeraki.com>

	* newsitems.py
	* reference.src: Add info about ref 2.8.1

2005-09-15  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Added QA-Assistant

2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added gpodder, Nixory, gquilt, GXFormer
                            Comix, Pida, PyBridge.
	* articles.src: Added bitpodder article (by Netza Gilbert)

2005-09-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/bitpodder/*: Added bitpodder article files

2005-09-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Shrinking Man Diet Tracker

2005-09-07  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PySnippet

2005-09-07  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Echelon Applet

2005-09-06  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Z88transfer

2005-09-02  Johan Dahlin  <jdahlin@async.com.br>

	* downloads.src:
	* newsitems.py: PyGTK 2.8.0

2005-08-24  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): Add 2.7.4.

2005-08-17  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Gnome Torrent and
	Gnome BitTorrent Downloader.
	Added "Music apps" link at the top.

2005-08-16  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Pygme to the audio section.

2005-08-15  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Gnome Sudoku and pykanjicard, added
	music and gaming sections.

2005-08-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PenguinTV, SBackup.

2005-08-10  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): Add 2.7.3.
	* download.src: Update to 2.6.

2005-08-08  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Guten, pyRadar, TimPlayer and TinyERP.
