@@ -1,3 +1,8 @@
+2005-09-21  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+        * articles.src: Fix missing end-quotes
+	* newsitems.py: Added new article notice by Nzeka Gilbert
+
 2005-09-17  John Finlay  <finlay@moeraki.com>
 
 	* newsitems.py
